# unic

./: .gitignore  Cargo.toml  README.md  config.example.toml
crates/unicos-agent/: Cargo.toml
crates/unicos-agent/src/: lib.rs
crates/unicos-bus/: Cargo.toml
crates/unicos-bus/src/: lib.rs
crates/unicos-cli/: Cargo.toml
crates/unicos-cli/src/: main.rs
crates/unicos-common/: Cargo.toml
crates/unicos-common/src/: ipc.rs  lib.rs
crates/unicos-core/: Cargo.toml
crates/unicos-core/src/: lib.rs
crates/unicos-llm/: Cargo.toml
crates/unicos-llm/src/: lib.rs  responses.rs
crates/unicos-tools/: Cargo.toml
crates/unicos-tools/src/: lib.rs
crates/unicosd/: Cargo.toml
crates/unicosd/src/: main.rs
rfcs/: RFC0000.md  RFC0001.md
