[workspace]
resolver = "2"
members = [
  "crates/unicos-common",
  "crates/unicos-bus",
  "crates/unicos-llm",
  "crates/unicos-tools",
  "crates/unicos-agent",
  "crates/unicos-core",
  "crates/unicos-cli",
  "crates/unicosd",
]

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"
rust-version = "1.85"

[workspace.dependencies]
async-trait = "0.1.89"
chrono = { version = "0.4.41", default-features = false, features = ["clock", "serde"] }
notify = "8.2.0"
reqwest = { version = "0.12.23", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
thiserror = "2.0.12"
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = "0.7.16"
toml = "0.9.5"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.18.1", features = ["serde", "v7"] }
