[package]
name = "unicos-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
default-run = "unicos-cli"

[dependencies]
nu-ansi-term = "0.50.3"
reedline = { version = "0.46.0", features = ["external_printer"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

unicos-common = { path = "../unicos-common" }
unicos-llm = { path = "../unicos-llm" }
