[package]
name = "unicos-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
notify.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
toml.workspace = true
tracing.workspace = true
uuid.workspace = true

unicos-agent = { path = "../unicos-agent" }
unicos-bus = { path = "../unicos-bus" }
unicos-common = { path = "../unicos-common" }
unicos-llm = { path = "../unicos-llm" }
unicos-tools = { path = "../unicos-tools" }

[dev-dependencies]
chrono.workspace = true
tempfile = "3.20.0"
