[package]
name = "unicos-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true

unicos-common = { path = "../unicos-common" }

[dev-dependencies]
chrono.workspace = true
tempfile = "3.20.0"
