[package]
name = "unicosd"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

unicos-core = { path = "../unicos-core" }
unicos-common = { path = "../unicos-common" }
unicos-bus = { path = "../unicos-bus" }
